--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
       rel="stylesheet"
     />
     <title>Les petits plats</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -37,66 +31,46 @@
 
       <!-- Main -->
       <main>
-        <!-- Section 1 : Recherche -->
-        <section class="recherche">
-          <form class="recherche__form recherche-principale">
+        <!-- Section 1 : Recherche principal-->
+        <section class="recherche-principal-container">
+          <div class="recherche-principale">
             <input
               class="recherche-principale__input"
               type="search"
               placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette"
               aria-label="Recherche dans le contenu du site"
             />
-          </form>
+          </div>
         </section>
-        <!-- Section 2 : Filtre -->
-        <section class="filtre">
-          <form class="dropdown recherche-filtre">
-            <button
-              class="btn dropdown-toggle dropdown__bouton"
-              type="button"
-              id="dropdownMenuButton1"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <input type="search" placeholder="Ingrédients" />
-              <img src="./assets/arrow.svg" alt="fleche" />
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-            <button
-              class="btn dropdown-toggle dropdown__bouton"
-              type="button"
-              id="dropdownMenuButton2"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <input type="search" placeholder="Appareil" />
-              <img src="./assets/arrow.svg" alt="fleche" />
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-            <button
-              class="btn dropdown-toggle dropdown__bouton"
-              type="button"
-              id="dropdownMenuButton3"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <input type="search" placeholder="Ustensiles" />
-              <img src="./assets/arrow.svg" alt="fleche" />
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </form>
+        <!-- Section 2 : Recherches secondaires -->
+        <section class="recherche-secondaires-container">
+          <div class="recherche-secondaires recherche-par-ingredients">
+            <input
+              type="search"
+              placeholder="Ingrédients"
+              class="recherche-par-ingredients__input"
+            />
+            <img src="./assets/arrow.svg" alt="fleche" />
+            <ul class="liste-ingredients"></ul>
+          </div>
+
+          <div class="recherche-secondaires recherche-par-appareil">
+            <input
+              type="search"
+              placeholder="Appareil"
+              class="recherche-par-appareil__input"
+            />
+            <img src="./assets/arrow.svg" alt="fleche" />
+          </div>
+
+          <div class="recherche-secondaires recherche-par-ustensiles">
+            <input
+              type="search"
+              placeholder="Ustensiles"
+              class="recherche-par-ustensiles__input"
+            />
+            <img src="./assets/arrow.svg" alt="fleche" />
+          </div>
         </section>
 
         <!-- Section 3 : Cartes -->
