filtre ingredients ok

--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
               placeholder="Ingrédients"
               class="recherche-par-ingredients__input"
             />
-            <img src="./assets/arrow.svg" alt="fleche" />
-            <ul class="liste-ingredients"></ul>
+            <img
+              src="./assets/arrow.svg"
+              class="fleche-ingredients"
+              alt="fleche"
+              liste-ingredients-selected="false"
+              ;
+            />
+            <ul class="liste-ingredients liste"></ul>
           </div>
 
           <div class="recherche-secondaires recherche-par-appareil">
@@ -60,7 +66,11 @@
               placeholder="Appareil"
               class="recherche-par-appareil__input"
             />
-            <img src="./assets/arrow.svg" alt="fleche" />
+            <img
+              src="./assets/arrow.svg"
+              class="fleche-appareil"
+              alt="fleche"
+            />
           </div>
 
           <div class="recherche-secondaires recherche-par-ustensiles">
@@ -69,7 +79,11 @@
               placeholder="Ustensiles"
               class="recherche-par-ustensiles__input"
             />
-            <img src="./assets/arrow.svg" alt="fleche" />
+            <img
+              src="./assets/arrow.svg"
+              class="fleche-ustensiles"
+              alt="fleche"
+            />
           </div>
         </section>
 
