filtre appareil ok

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
               src="./assets/arrow.svg"
               class="fleche-ingredients"
               alt="fleche"
-              liste-ingredients-selected="false"
               ;
             />
             <ul class="liste-ingredients liste"></ul>
@@ -71,6 +70,7 @@
               class="fleche-appareil"
               alt="fleche"
             />
+            <ul class="liste-appareil liste"></ul>
           </div>
 
           <div class="recherche-secondaires recherche-par-ustensiles">
@@ -84,6 +84,7 @@
               class="fleche-ustensiles"
               alt="fleche"
             />
+            <ul class="liste-ustensiles liste"></ul>
           </div>
         </section>
 
